Update backend URL